--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,161 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  font-family: Inter, sans-serif;
+   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+                    url('./assets/images/background.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
+  background-attachment: fixed;
+  color: white;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 241px;
+  width: 100%;
+  background-color: rgb(45, 45, 45);
+  padding: 0 120px;
+  gap: 50px;
+  margin-bottom: 50px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+header > div.heading {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+header > div.heading > h1 {
+  font-size: 32px;
+  font-weight: 700;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+header > div.heading > h1 > span {
+  color: #FF0A0A;
+}
+
+header > div.heading > input {
+  max-width: 285px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #FF0909;
+  padding: 11px 15px;
+  font-size: 16px;
+  font-weight: 400;
+  background-color: transparent;
+  color: white;
+}
+
+header > div.heading > input:focus {
+  outline: #FF0909;
+  caret-color: #fff;
+}
+
+header > div.categories {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+  max-width: 350px;
+  height: 31px;
+  flex-wrap: wrap;
+}
+
+header > div.categories > button {
+  height: 31px;
+  border-radius: 5px;
+  padding: 6px 12px;
+  background-color: #FF4343;
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+  border: none;
+  cursor: pointer;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main > div.meal-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+main > div.meal-list > div.meal-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 340px;
+  height: 167px;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 0.66px solid #f57070;
+  border-radius: 10px;
+  padding: 7px 13px;
+}
+
+main > div.meal-list > div.meal-container > div.image-container {
+  width: 133px;
+  height: 133px;
+  color: #D9D9D9;
+  border-radius: 50%;
+  box-shadow: 0px 5.7px 9.5px rgba(0, 0, 0, 0.25);
+}
+
+main > div.meal-list > div.meal-container > div.meal-description {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-items: center;
+}
+
+main > div.meal-list > div.meal-container > div.meal-description > div.meal-text {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: start;
+  justify-content: center;
+  gap: 10px;
+}
+
+h2 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+main > div.meal-list > div.meal-container > div.meal-description > button {
+  width: 57px;
+  height: 25px;
+  padding: 4px 6px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background-color: #FF4343;
+  align-self: flex-end;
 }
