--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Inter, sans-serif;
-   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
                     url('./assets/images/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -169,7 +169,7 @@ main > div.meal-list > div.meal-container > div.meal-description > div.meal-text
   gap: 10px;
 }
 
-h2 {
+.title {
   margin: 0;
   width: 100px;
   font-size: 15px;
@@ -181,7 +181,7 @@ h2 {
   line-clamp: 2;
 }
 
-p {
+.short-instructions {
   font-size: 10px;
   width: 150px;
   margin: 0;
@@ -226,6 +226,98 @@ button:active {
   color: inherit;
 }
 
+.meal-page-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.meal-page {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 50px;
+  gap: 30px;
+  max-width: 1200px;
+}
+
+.ingredient-heading {
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid #f57070;
+  border-radius: 10px;
+  padding: 10px 15px;
+  gap: 20px;
+  align-items: center;
+}
+
+.ingredient-heading > h1, h2, h3 {
+  margin: 0;
+}
+
+.content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid #f57070;
+  border-radius: 10px;
+  padding: 10px 15px;
+  justify-content: center;
+}
+
+.photo {
+  width: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 5.7px 9.5px rgba(0, 0, 0, 0.25);
+  border: 1px solid #f57070;
+}
+
+.ingredient-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.ingredient-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 120px;
+  border: 1px solid #f57070;
+  border-radius: 10px;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  text-align: center;
+}
+
+.instruction-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid #f57070;
+  border-radius: 10px;
+  padding: 10px 15px;
+  text-align: start;
+}
+
+.instruction-list > li::marker {
+  color: #FF4343;
+  font-weight: 600;
+}
+
 @media (max-width: 1200px) {
   .meal-list {
     width: 1110px;
@@ -235,6 +327,10 @@ button:active {
 @media (max-width: 800px) {
   .meal-list {
     width: 740px;
+  }
+
+  .content {
+    flex-direction: column;
   }
 }
 
@@ -265,5 +361,23 @@ button:active {
   .categories {
     gap: 2px;
     width: 200px;
+  }
+
+  .content {
+    flex-direction: column;
+    padding: 5px 10px;
+  }
+
+  .photo {
+    width: 200px;
+  }
+
+  .ingredient-list {
+    justify-content: center;
+  }
+
+  .ingredient-container {
+    width: 100px;
+    height: auto;
   }
 }
